--- a/my-react-project/src/components/styles.css
+++ b/my-react-project/src/components/styles.css
@@ -1,32 +1,40 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");
+
+button:focus {
+  outline: 0;
+}
+
 html,
 body {
   margin: 0;
 }
 
 #App {
-  font-family: sans-serif;
+  font-family: "Roboto Mono", monospace;
   height: 100vh;
 }
 
 #page-wrap {
   text-align: center;
   overflow: auto;
-  /* top: 45%; */
   position: relative;
 }
 
 .bm-item {
   display: inline-block;
-
   /* Our sidebar item styling */
   text-decoration: none;
   margin-bottom: 10px;
-  color: #d1d1d1;
+  color: white;
   transition: color 0.2s;
 }
 
 .bm-item:hover {
-  color: white;
+  color: #f9b623;
+}
+
+.bm-item:focus {
+  outline: 0;
 }
 
 .bm-burger-button {
@@ -39,7 +47,7 @@ body {
 
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
-  background: #373a47;
+  background: #a3195b;
 }
 
 /* Position and sizing of clickable cross button */
@@ -50,27 +58,12 @@ body {
 
 /* Color/shape of close button cross */
 .bm-cross {
-  background: #bdc3c7;
+  background: white;
 }
 
 /* General sidebar styles */
 .bm-menu {
-  background: #000;
+  background: #a3195b;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
-}
-
-/* Morph shape necessary with bubble or elastic */
-.bm-morph-shape {
-  fill: #373a47;
-}
-
-/* Wrapper for item list */
-.bm-item-list {
-  color: #b8b7ad;
-}
-
-/* Styling of overlay */
-.bm-overlay {
-  background: rgba(0, 0, 0, 0.3);
 }
