--- a/my-react-project/src/stylesheets/core/_reset.scss
+++ b/my-react-project/src/stylesheets/core/_reset.scss
@@ -2,10 +2,7 @@
   margin: 0px;
   box-sizing: border-box;
   text-decoration: none;
-}
-body {
-  cursor: url("../../images/venus.png");
-  // cursor: help;
+  cursor: url("../../images/venus.png"), auto;
 }
 button:focus {
   outline: 0;
