--- a/my-react-project/src/stylesheets/layout/_home.scss
+++ b/my-react-project/src/stylesheets/layout/_home.scss
@@ -11,6 +11,50 @@
     @media all and (max-width: 850px) {
       display: none;
     }
+    &:hover {
+      cursor: url("../../images/venus-white.png"), auto;
+    }
+  }
+  &-firstmessage {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    &_logo {
+      // border: 2px solid $orange;
+      border-radius: 50%;
+      width: 110px;
+      height: 110px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 20px;
+      &-image {
+        width: 70px;
+        height: 70px;
+      }
+    }
+    &_text {
+      color: $purple;
+      font-size: 40px;
+    }
+    &_button {
+      margin-top: 30px;
+      width: 100px;
+      height: 40px;
+      border-radius: 10px;
+      border: 1px solid $orange;
+      background-color: $orange;
+      color: $white;
+      cursor: pointer;
+      font-size: 15px;
+      box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.15);
+      &:hover {
+        background-color: $white;
+        color: $purple;
+      }
+    }
   }
   &-chatbot {
     height: 95%;
@@ -20,5 +64,34 @@
     @media all and (max-width: 850px) {
       padding: 10px;
     }
+  }
+}
+
+// Animations
+
+.scale-up-hor-left {
+  animation: scale-up-hor-left 0.9s cubic-bezier(0.47, 0, 0.745, 0.715) both;
+}
+@keyframes scale-up-hor-left {
+  0% {
+    transform: scaleX(0.4);
+    transform-origin: 0% 0%;
+  }
+  100% {
+    transform: scaleX(1);
+    transform-origin: 0% 0%;
+  }
+}
+
+.shadow-drop-center {
+  animation: shadow-drop-center 0.9s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+@keyframes shadow-drop-center {
+  0% {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+  100% {
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
   }
 }
