Change all structure

--- a/my-react-project/src/stylesheets/App.scss
+++ b/my-react-project/src/stylesheets/App.scss
@@ -4,9 +4,9 @@
 
 //components
 @import "./components/menu";
+@import "./components/logo";
 
 //layout
 @import "./layout/main";
-@import "./layout/elements";
 @import "./layout/home";
 @import "./layout/footer";
