--- a/my-react-project/src/stylesheets/layout/_home.scss
+++ b/my-react-project/src/stylesheets/layout/_home.scss
@@ -12,7 +12,7 @@
       display: none;
     }
     &:hover {
-      cursor: url("../../images/venus-white.png"), auto;
+      cursor: url("../../images/venus-white.svg"), auto;
     }
   }
   &-firstmessage {
@@ -38,6 +38,7 @@
     &_text {
       color: $purple;
       font-size: 40px;
+      max-width: 360px;
     }
     &_button {
       margin-top: 30px;
