Added general styles and social media

--- a/my-react-project/src/stylesheets/App.scss
+++ b/my-react-project/src/stylesheets/App.scss
@@ -5,8 +5,10 @@
 //components
 @import "./components/menu";
 @import "./components/logo";
+@import "./components/social";
 
 //layout
 @import "./layout/main";
 @import "./layout/home";
 @import "./layout/footer";
+@import "./layout/chatbot/reset";
