--- a/my-react-project/src/stylesheets/layout/chatbot/_reset.scss
+++ b/my-react-project/src/stylesheets/layout/chatbot/_reset.scss
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
   top: 25px;
   left: 61%;
   color: $white;
