Finish Chat styles

--- a/my-react-project/src/stylesheets/layout/_footer.scss
+++ b/my-react-project/src/stylesheets/layout/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   display: flex;
   align-items: center;
-  position: fixed;
+  position: absolute;
   bottom: 0px;
   width: 100%;
   justify-content: space-between;
