--- a/my-react-project/src/stylesheets/layout/chatbot/_hello.scss
+++ b/my-react-project/src/stylesheets/layout/chatbot/_hello.scss
@@ -22,16 +22,45 @@
     font-size: 11px;
   }
   &-response {
-    background-color: red;
     display: flex;
     flex-direction: column;
-
-    // align-content: center;
+    align-items: flex-end;
+    margin-right: 20px;
     .button {
-      width: 70px;
+      z-index: 99;
+      cursor: pointer;
+      margin-top: 20px;
+      width: 100px;
+      height: 30px;
+      border-radius: 10px;
+      border: 1px solid $orange;
+      background-color: $orange;
+      color: $white;
+      cursor: pointer;
+      font-size: 13px;
+      box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.15);
+      &:hover {
+        background-color: $white;
+        color: $purple;
+      }
+    }
+    .button-instructions {
+      z-index: 99;
+      cursor: pointer;
+      margin-top: 10px;
+      font-size: 12px;
+      // width: 110px;
+      // height: 50px;
+      color: $purple;
+      // border-radius: 10px;
+      border-bottom: 1px solid $purple;
+      &:hover {
+        border-bottom: 1px solid $orange;
+      }
     }
     .input {
-      width: 70px;
+      z-index: 99;
+      width: 100%;
 
       cursor: text;
       border: none;
@@ -65,7 +94,7 @@
 }
 .avatar-left {
   flex-direction: row-reverse;
-  margin-right: 20px;
+  margin: 20px 20px 0 0;
   &-text {
     margin-right: 10px;
   }
