styles chatbot finished

--- a/my-react-project/src/stylesheets/App.scss
+++ b/my-react-project/src/stylesheets/App.scss
@@ -13,3 +13,5 @@
 @import "./layout/footer";
 @import "./layout/chatbot/reset";
 @import "./layout/chatbot/hello";
+@import "./layout/chatbot/quiz";
+@import "./layout/chatbot/result";
