--- a/my-react-project/src/stylesheets/layout/_home.scss
+++ b/my-react-project/src/stylesheets/layout/_home.scss
@@ -19,6 +19,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    transform: translate(0px, -30px);
     align-items: center;
     text-align: center;
     &_logo {
@@ -56,15 +57,15 @@
       }
     }
   }
-  &-chatbot {
-    height: 95%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    @media all and (max-width: 850px) {
-      padding: 10px;
-    }
-  }
+  // &-chatbot {
+  //   // height: 95%;
+  //   // display: flex;
+  //   // align-items: center;
+  //   // justify-content: center;
+  //   @media all and (max-width: 850px) {
+  //     padding: 10px;
+  //   }
+  // }
 }
 
 // Animations
