--- a/my-react-project/src/stylesheets/core/_reset.scss
+++ b/my-react-project/src/stylesheets/core/_reset.scss
@@ -2,7 +2,7 @@
   margin: 0px;
   box-sizing: border-box;
   text-decoration: none;
-  cursor: url("../../images/venus.svg"), auto;
+  // cursor: url("../../images/venus.svg"), auto;
   // cursor: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/9632/heart.svg), auto;
 }
 button:focus {
