--- a/my-react-project/src/stylesheets/layout/_home.scss
+++ b/my-react-project/src/stylesheets/layout/_home.scss
@@ -8,14 +8,25 @@
   &-image {
     height: 95%;
     background-color: $purple;
+    overflow: hidden;
     @media all and (max-width: 850px) {
       display: none;
     }
-    &:hover {
-      cursor: url("../../images/venus-white.svg"), auto;
+    &-illus {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center center;
+      filter: brightness(0.65);
+      transition: filter 0.7s ease;
+      &:hover {
+        cursor: url("../../images/venus-white.svg"), auto;
+        filter: brightness(0.75);
+      }
     }
   }
   &-firstmessage {
+    cursor: url("../../images/venus.svg"), auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -57,15 +68,6 @@
       }
     }
   }
-  // &-chatbot {
-  //   // height: 95%;
-  //   // display: flex;
-  //   // align-items: center;
-  //   // justify-content: center;
-  //   @media all and (max-width: 850px) {
-  //     padding: 10px;
-  //   }
-  // }
 }
 
 // Animations
