--- a/src/stylesheets/layout/chatbot/_result.scss
+++ b/src/stylesheets/layout/chatbot/_result.scss
@@ -3,7 +3,7 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  padding-top: 180px;
   align-items: center;
   &-true,
   &-false {
@@ -14,7 +14,7 @@
     z-index: 99;
     cursor: pointer;
     margin-top: 40px;
-    width: 130px;
+    // width: 160px;
     height: 30px;
     border-radius: 10px;
     border: 1px solid $orange;
