--- a/src/stylesheets/components/_social.scss
+++ b/src/stylesheets/components/_social.scss
@@ -5,11 +5,12 @@
   bottom: 45%;
   padding: 0px;
   z-index: 99;
+  margin: 0px;
   &-icon {
     cursor: pointer;
     width: 40px;
     height: 40px;
-    margin-bottom: 10px;
+    margin: 0 0 10px 0;
     border-radius: 50%;
     background-color: $orange;
     display: flex;
@@ -17,13 +18,17 @@
     align-items: center;
     color: $white;
     @media all and (max-width: 850px) {
-      margin-right: 10px;
+      margin: 5px;
+      margin-top: 0px;
     }
     &-detail {
       cursor: pointer;
       height: 22px;
       width: 22px;
     }
+    // .fa {
+    //   margin-right: 10px !important;
+    // }
   }
   @media all and (max-width: 850px) {
     display: flex;
