--- a/src/stylesheets/layout/_home.scss
+++ b/src/stylesheets/layout/_home.scss
@@ -30,7 +30,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    transform: translate(0px, -30px);
+    transform: translate(0px, -5%);
     align-items: center;
     text-align: center;
     &_logo {
